--- a/README
+++ b/README
@@ -15,8 +15,11 @@ Usage: las2witsml [-n name] [-u uid] [-b uid] [-l uid] [-x version] [-h] [-v] la
 Example:
 las2witsml -x 1.3.1 -u W1 -b B1 -l L1 -n Unnamed lasfile.las
 
+las2witsml files: Copyright 2012 Wellstorm Development LLC
 License: Apache 2.0
 
 History:
 
 12 Jun 2012 -- gemified existing code and initial commit. (0.1.1)
+14 Jun 2012 -- proper return values to shell: 0 success, 1 failure. (0.1.2)
+
