--- a/README
+++ b/README
@@ -9,6 +9,9 @@ Usage: las2witsml [-n name] [-u uid] [-b uid] [-l uid] [-x version] [-h] [-v] la
     -b, --uidwellbore uid            WITSML uid of the containing wellbore
     -l, --uidlog  uid                WITSML uid to assign the log
     -x, --version  version           WITSML version to emit, either 1.3.1 or 1.4.1; default 1.4.1
+    -m, --uomfile  path              Path to a units of measure JSON file, mapping foreign to 
+                                     WITSML units of measure (like default file 
+                                     '/Users/hughw/las2witsml/lib/uom.json')
     -v, --verbose                    Emit diagnostic output on stderr
     -h, --help                       Show this message
 
@@ -22,4 +25,6 @@ History:
 
 12 Jun 2012 -- gemified existing code and initial commit. (0.1.1)
 14 Jun 2012 -- proper return values to shell: 0 success, 1 failure. (0.1.2)
+30 Sep 2013 -- extended list of units of measure; throw exception if unrecognized uom.
+ 1 Oct 2013 -- support for external uom file
 
