--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-las2witsml -- Convert Log ASCII Stanfard (LAS) files to WITSML <log> objects.
+las2witsml -- Convert Log ASCII Standard (LAS) files to WITSML <log> objects.
 
 Use this script to convert LAS files to WITSML logs. The script attempts to be forgiving
 of some commonly encountered variations. It can process most LAS v2 and v3 files.  
@@ -10,7 +10,7 @@ Usage: las2witsml [-n name] [-u uid] [-b uid] [-l uid] [-x version] [-m uomfile]
     -l, --uidlog  uid                WITSML uid to assign the log
     -x, --version  version           WITSML version to emit, either 1.3.1 or 1.4.1; default 1.4.1
     -m, --uomfile  path              Path to a units of measure JSON file, mapping foreign  
-                                     to WITSML units of measure [default] (https://github.com/wellstorm/las2witsml/blob/master/lib/uom.json "The default uom.json file")
+                                     to WITSML units of measure e.g. https://github.com/wellstorm/las2witsml/blob/master/lib/uom.json 
     -v, --verbose                    Emit diagnostic output on stderr
     -h, --help                       Show this message
 
@@ -24,6 +24,6 @@ History:
 
 12 Jun 2012 -- gemified existing code and initial commit. (0.1.1)
 14 Jun 2012 -- proper return values to shell: 0 success, 1 failure. (0.1.2)
-30 Sep 2013 -- extended list of units of measure; throw exception if unrecognized uom.
- 1 Oct 2013 -- support for external uom file
+30 Sep 2013 -- extended list of units of measure; throw exception if unrecognized uom. (0.1.3)
+ 1 Oct 2013 -- support for external uom file (0.1.4)
 
